--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-home-title: H2O Theme For Jekyll
-description: 或许是最漂亮的Jekyll主题
+home-title: Eats and Treats
+description: Joey and Jen's food adventures
+published: true
 ---
 
 {% include header.html %}
